--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@types/react-slick": "^0.23.10",
     "antd": "^5.6.4",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-spring-bottom-sheet": "^3.4.1",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^3.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.4.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
