--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,11 +4,11 @@
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
-  "scope": ".",
-  "start_url": "/",
+  "scope": "/",
+  "start_url": "/", 
   "icons": [
     {
-      "src": "maskble.png",
+      "src": "maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
