--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^7.61.0",
     "@types/axios": "^0.14.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
