--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sentry/react": "^7.61.0",
+    "@sentry/vite-plugin": "^2.6.0",
     "@types/axios": "^0.14.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
