--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/axios": "^0.14.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
