fix landing page and fix style of authentication

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,17 @@
     "baseUrl": "src",
     "downlevelIteration": true
   },
+  // "baseUrl": ".",
+  // "paths": {
+  //   "@/*": ["src/*"]
+  // },
+  // "path": {
+  //   "@components/*": ["src/components/*"],
+  //   "@services/*": ["src/services/*"],
+  //   "@pages/*": ["src/pages/*"],
+  //   "@assets/*": ["src/assets/*"],
+  //   "@utils/*": ["src/utils/*"]
+  // },
   "references": [{ "path": "./tsconfig.node.json" }],
   "include": [
     "src"
