--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sentry/react": "^7.61.0",
     "@sentry/vite-plugin": "^2.6.0",
     "@types/axios": "^0.14.0",
+    "@types/react-slick": "^0.23.10",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "jalali-moment": "^3.3.11",
@@ -27,7 +28,9 @@
     "react-media-recorder": "^1.6.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.65.0",
+    "slick-carousel": "^1.8.1",
     "vite-plugin-sass": "^0.1.0",
     "vite-tsconfig-paths": "^4.2.0",
     "web-vitals": "^3.4.0",
