--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sentry/vite-plugin": "^2.6.0",
     "@types/axios": "^0.14.0",
     "@types/react-slick": "^0.23.10",
+    "@vitejs/plugin-react": "^4.0.4",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "jalali-moment": "^3.3.11",
