--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-react": "^4.0.4",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.0",
     "react-slick": "^0.29.0",
+    "reactstrap": "^9.2.0",
     "sass": "^1.65.0",
     "slick-carousel": "^1.8.1",
     "vite-plugin-sass": "^0.1.0",
