--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "@refinedev/core": "^4.38.0",
+    "@refinedev/inferencer": "^4.5.4",
+    "@refinedev/react-router-v6": "^4.5.0",
+    "@refinedev/simple-rest": "^4.5.0",
     "@sentry/react": "^7.61.0",
     "@sentry/vite-plugin": "^2.6.0",
     "@types/axios": "^0.14.0",
@@ -30,7 +34,7 @@
     "react-icons": "^4.10.1",
     "react-media-recorder": "^1.6.6",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.14.0",
+    "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-spring-bottom-sheet": "^3.4.1",
     "reactstrap": "^9.2.0",
@@ -52,7 +56,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier": "^3.0.1",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "vite": "^4.3.9",
     "vite-plugin-sass-dts": "^1.3.9"
   }
