--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.2.0",
+    "@mui/material": "^5.14.9",
     "@refinedev/core": "^4.38.0",
     "@refinedev/inferencer": "^4.5.4",
+    "@refinedev/mui": "^5.13.4",
     "@refinedev/react-router-v6": "^4.5.0",
     "@refinedev/simple-rest": "^4.5.0",
     "@sentry/react": "^7.61.0",
