--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "typeRoots": ["node_modules/@types", "node_modules"],
+    // "typeRoots": ["node_modules/@types", "node_modules"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
