--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.2.0",
+    "@react-icons/all-files": "^4.1.0",
     "@refinedev/core": "^4.38.0",
     "@refinedev/inferencer": "^4.5.4",
     "@refinedev/react-router-v6": "^4.5.0",
