--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "classnames": "^2.3.2",
     "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -37,6 +38,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "react-spring-bottom-sheet": "^3.4.1",
     "reactstrap": "^9.2.0",
     "sass": "^1.65.0",
     "slick-carousel": "^1.8.1",
