--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,23 +27,12 @@
     "noImplicitAny": false,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+  "baseUrl": "src",
+
   },
-  // "baseUrl": ".",
-  // "paths": {
-  //   "@/*": ["src/*"]
-  // },
-  // "path": {
-  //   "@components/*": ["src/components/*"],
-  //   "@services/*": ["src/services/*"],
-  //   "@pages/*": ["src/pages/*"],
-  //   "@assets/*": ["src/assets/*"],
-  //   "@utils/*": ["src/utils/*"]
-  // },
   "references": [{ "path": "./tsconfig.node.json" }],
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "exclude": ["node_modules"],
   "rules": {
     "no-unused-vars": "off",
