--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
+    "clipboard": "^2.0.11",
     "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.11",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
