--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.10.1",
     "react-media-recorder": "^1.6.6",
     "react-otp-input": "^3.1.0",
+    "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
