--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
     "clipboard": "^2.0.11",
+    "date-fns": "^3.0.4",
     "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
