--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-media-recorder": "^1.6.6",
+    "react-number-format": "^5.3.1",
     "react-otp-input": "^3.1.0",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
