--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
