--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --port 8000",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -29,6 +29,7 @@
     "classnames": "^2.3.2",
     "clipboard": "^2.0.11",
     "date-fns": "^3.0.4",
+    "dotenv": "^16.3.1",
     "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
