--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,3 @@
-REACT_APP_BASE_URL=https://dev-api.arsonex.market/v1/
+REACT_APP_BASE_URL_DEV=https://dev-api.arsonex.market/v1/ 
+REACT_APP_BASE_URL_STAGE=https://staging-api.arsonex.market/v1/
+REACT_APP_BASE_URL=https://api.arsonex.com/v1/
