--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "clipboard": "^2.0.11",
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.0.4",
     "dotenv": "^16.3.1",
     "jalali-moment": "^3.3.11",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "money": "^0.2.0",
     "react": "^18.2.0",
