--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.0.4",
     "dotenv": "^16.3.1",
     "jalali-moment": "^3.3.11",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "money": "^0.2.0",
