--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.0.4",
     "dotenv": "^16.3.1",
+    "framer-motion": "^11.1.7",
     "jalali-moment": "^3.3.11",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -47,6 +48,7 @@
     "react-media-recorder": "^1.6.6",
     "react-number-format": "^5.3.1",
     "react-otp-input": "^3.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
     "react-record-webcam": "^1.0.0",
