--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-VITE_BASE_URL_DEV=https://dev-api.arsonex.market/v1/ 
-VITE_BASE_URL_STAGE=https://staging-api.arsonex.market/v1/
+VITE_BASE_URL_DEV=https://dev-api.paydirham.me/v1/
+VITE_BASE_URL_STAGE=https://staging-api.paydirham.me/v1/
 VITE_BASE_URL=https://api.arsonex.com/v1/
