--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-slick": "^0.29.0",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-to-print": "^2.15.1",
+    "react-webcam": "^7.2.0",
     "reactstrap": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.65.0",
