--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-images-uploading": "^3.1.7",
+    "react-lottie": "^1.2.4",
     "react-media-recorder": "^1.6.6",
     "react-number-format": "^5.3.1",
     "react-otp-input": "^3.1.0",
@@ -57,6 +58,7 @@
     "react-slick": "^0.29.0",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-to-print": "^2.15.1",
+    "react-webcam": "^7.2.0",
     "reactstrap": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.65.0",
@@ -72,6 +74,7 @@
     "@types/node": "^20.4.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lottie": "^1.2.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
