--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-images-uploading": "^3.1.7",
+    "react-international-phone": "^4.3.0",
     "react-lottie": "^1.2.4",
     "react-media-recorder": "^1.6.6",
     "react-number-format": "^5.3.1",
