--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.0.4",
     "dotenv": "^16.3.1",
     "framer-motion": "^11.1.7",
+    "google-libphonenumber": "^3.2.34",
     "jalali-moment": "^3.3.11",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -71,6 +72,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.4.5",
     "@types/react": "^18.0.37",
