--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@hookform/resolvers": "^3.2.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "@sentry/react": "^7.61.0",
+    "@sentry/react": "^8.5.0",
     "@sentry/vite-plugin": "^2.6.0",
+    "@tanstack/react-table": "^8.17.3",
     "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-react": "^4.0.4",
     "antd": "^5.6.4",
