--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
-    "clipboard": "^2.0.11",
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
@@ -38,6 +37,7 @@
     "lodash": "^4.17.21",
     "money": "^0.2.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-currency-input-field": "^3.6.11",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
