--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 8000",
+    "build:pro": "cp .env.pro .env && vite build",
+    "build:dev": "cp .env.dev .env && vite build",
+    "build:stg": "cp .env.stg .env && vite build",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
