--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:stg": "cp .env.stg .env && vite build",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --host",
+     "start": "npm run preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
