add vit pwa config and remove redundant files

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.7",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.4.5",
