--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@hookform/resolvers": "^3.2.0",
+    "@marsidev/react-turnstile": "^0.7.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/react": "^8.5.0",
     "@sentry/vite-plugin": "^2.6.0",
