fix advantages and spot-rate

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.3",
     "classnames": "^2.3.2",
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
@@ -37,7 +38,10 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "money": "^0.2.0",
+    "numbro": "^2.5.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-currency-input-field": "^3.6.11",
     "react-device-detect": "^2.2.3",
