--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "arsonex",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx husky"
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "pages:build-dev": "NODE_ENV=development npx @cloudflare/next-on-pages",
+    "pages:build-staging": "NODE_ENV=staging npx @cloudflare/next-on-pages ",
+    "pages:build-prod": "NODE_ENV=production npx @cloudflare/next-on-pages"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.52.0",
     "apexcharts": "^3.51.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
@@ -24,7 +28,7 @@
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
-    "husky": "latest",
+    "@tanstack/eslint-plugin-query": "^5.52.0",
     "lint-staged": "latest",
     "prettier": "latest"
   },
